fixed font changes not showing on dark mode

--- a/src/app/components/theme-toggle/theme-toggle.component.sass
+++ b/src/app/components/theme-toggle/theme-toggle.component.sass
@@ -39,5 +39,5 @@
                 transition:  .3s ease-in-out
                 path
                     stroke: $clr-purple
-                    fill: $clr-purple
+                    // fill: $clr-purple
 
