--- a/src/styles.sass
+++ b/src/styles.sass
@@ -71,7 +71,7 @@ $font-family: $ff-SanSerif
     $font-family: $ff-SanSerif
     body
         font-family: $font-family
-        
+
         .search-input
             font-family: $font-family !important
         
@@ -96,6 +96,42 @@ $font-family: $ff-SanSerif
     $text-secondary: $clr-gray-900
     $text-purple: $clr-purple
     $text-warning: $clr-red
+
+    // fonts on dark mode      
+    [data-fontFamily="Serif"]
+        $font-family: $ff-Serif
+
+        body
+            font-family: $font-family
+
+            .search-input
+                font-family: $font-family !important
+            
+            .selector__button
+                font-family: $font-family !important
+
+    [data-fontFamily="San Serif"]
+        $font-family: $ff-SanSerif
+        body
+            font-family: $font-family
+            
+            .search-input
+                font-family: $font-family !important
+            
+            .selector__button
+                font-family: $font-family !important
+
+    [data-fontFamily="Mono"]
+        $font-family: $ff-Mono
+        body
+            font-family: $font-family !important
+            
+            .search-input
+                font-family: $font-family !important
+            
+            .selector__button
+                font-family: $font-family !important
+
 
     body
         background: $background-color
